fixed imgeViewer and infoScreen for mobile, as well as overlapping in the tool window on mobile

--- a/src/Styles/imageViewer.scss
+++ b/src/Styles/imageViewer.scss
@@ -14,12 +14,19 @@
   justify-content: space-around;
   width: 80vw;
   height: 80vh;
+  @media only screen and (max-width: 768px) {
+    width: 100vw;
+    height: auto;
+  }
   //   padding: 1rem;
   .display-wrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    @media only screen and (max-width: 768px) {
+      flex-direction: column;
+    }
 
     .image-display {
       display: flex;
@@ -27,8 +34,15 @@
       justify-content: center;
       width: 80%;
       animation: simple-opacity-fadein 500ms 0s forwards ease-in;
+      @media only screen and (max-width: 768px) {
+        width: 95%;
+        margin-bottom: 5%;
+      }
       img {
         width: 90%;
+        @media only screen and (max-width: 768px) {
+          width: 100%;
+        }
       }
     }
 
@@ -39,9 +53,17 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-evenly;
+      @media only screen and (max-width: 768px) {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 95%;
+      }
       .image-tile {
         // height: 5%;
         cursor: pointer;
+        @media only screen and (max-width: 768px) {
+          width: 24%;
+        }
 
         img {
           opacity: 0;
