--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -10,6 +10,7 @@ body {
   @media only screen and (max-width: 768px) {
     overflow: auto;
     font-size: 16px;
+    width: 100vw;
   }
 }
 
