--- a/src/Styles/nav.scss
+++ b/src/Styles/nav.scss
@@ -27,9 +27,10 @@ $nav-bar-delay: $nav-base-delay + ($nav-seq-delay * 3);
   transform: translateX(-50%);
 
   @media only screen and (max-width: 768px) {
+    position: fixed;
     background-color: rgb(0, 0, 0);
     width: 100%;
-    height: 7vh;
+    height: 10vh;
     font-size: 18px;
     // height: 13%;
     // padding-left: 5px;
