--- a/src/Styles/projectsScreen.scss
+++ b/src/Styles/projectsScreen.scss
@@ -42,6 +42,7 @@ $dims: 180px;
 
   @media only screen and (max-width: 768px) {
     padding-top: 50px;
+    margin-bottom: 100px;
     height: auto;
   }
 }
@@ -65,7 +66,7 @@ $dims: 180px;
 
   @media only screen and (max-width: 768px) {
     flex-direction: column;
-    margin-bottom: 25px;
+    padding-bottom: 25px;
   }
 
   .text {
@@ -198,6 +199,7 @@ $dims: 180px;
   color: $clr;
 
   @media only screen and (max-width: 768px) {
+    position: fixed;
     z-index: 500;
   }
 
@@ -223,6 +225,7 @@ $dims: 180px;
 
   @media only screen and (max-width: 768px) {
     left: 50%;
+    // margin-top: 30px;
   }
 }
 
@@ -231,7 +234,7 @@ $dims: 180px;
   left: 50%;
 
   @media only screen and (max-width: 768px) {
-    top: 12vh;
+    top: 11vh;
     left: 50%;
   }
 }
