--- a/src/Styles/toolkitScreen.scss
+++ b/src/Styles/toolkitScreen.scss
@@ -165,9 +165,15 @@ $grid-enter-duration: 400ms;
   animation: color-in 1s 0s forwards ease-in-out;
 
   @media only screen and (max-width: 768px) {
-    width: 90%;
+    position: fixed;
+    width: 85%;
+    height: auto;
     border: 3px solid white;
     background-color: rgba(0, 1, 53, 0.904);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
   }
 
   .line {
@@ -176,6 +182,9 @@ $grid-enter-duration: 400ms;
     height: 4px;
     background-color: black;
     transition: width 1s ease-in-out;
+    @media only screen and (max-width: 768px) {
+      position: relative;
+    }
   }
 
   h2 {
